test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-anyin-boolean/chainsaw-step-01-apply-1-1.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: operator-anyin-boolean-cpol
spec:
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: check-commands
    preconditions:
      all:
      - key: '{{ length(request.object.spec.containers[].livenessProbe.exec.command[]
          || `[]`) }}'
        operator: GreaterThan
        value: 0
      - key: '{{ request.operation }}'
        operator: NotEquals
        value: DELETE
    validate:
      validationFailureAction: Enforce
      deny:
        conditions:
          any:
          - key: true
            operator: AnyIn
            value: '{{ request.object.spec.containers[].livenessProbe.exec.command[].regex_match(''\bjcmd\b'',@)
              }}'
      message: Cannot use commands `jcmd`, `ps`, or `ls` in liveness probes.
