test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-anyin-boolean/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: operator-anyin-boolean-pod
spec:
  terminationGracePeriodSeconds: 10
  containers:
  - name: container01
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - jcmd | grep Main
  - name: container02
    image: czjunkfoo
  - name: container03
    image: czjunkfoo
    livenessProbe:
      httpGet:
        port: 8080
  - name: container04
    image: czjunkfoo
    livenessProbe:
      exec:
        command:
        - /bin/sh
        - -c
        - cat | ls -l
