test/conformance/chainsaw/validate/clusterpolicy/standard/enforce/operator-anyin-boolean/02-assert.yaml
apiVersion: kyverno.io/v2beta1
kind: ClusterPolicy
metadata:
  name: operator-anyin-boolean-cpol
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
